--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,24 @@
 <resources>
     <string name="app_name">Oction</string>
 
+    <string name="title_main_activity">OCTION.CO</string>
 
     <string name="title_auction">Auction</string>
     <string name="title_credits">Credits</string>
     <string name="title_account">Account</string>
     
     <string name="title_auction_current">CURRENT</string>
-    <string name="title_auction_upcoming">UPCOMING></string>
+    <string name="title_auction_upcoming">UPCOMING</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_fragment_account">Account fragment</string>
+    <string name="hello_fragment_credits">Credits fragment</string>
+    <string name="hello_fragment_auction_current">Auction current fragment</string>
+    <string name="hello_fragment_auction_upcoming">Auction upcoming fragment</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="no_data">No auctions found</string>
+    <string name="str_value_price_and_currency">Retail Price %1$s %2$f</string>
+
+
 </resources>
